--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,13 @@
             <artifactId>datafactory</artifactId>
             <version>0.8</version>
             <type>jar</type>
-        </dependency>        
+        </dependency>     
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>3.0.0</version>
+            <scope>test</scope>
+        </dependency>           
     </dependencies>    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
